--- a/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/index.html
+++ b/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/index.html
@@ -64,14 +64,14 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="/static/img/productimg1.jpg"></td>
+										<td><img src="/static/img/product/img1.jpg"></td>
 										<td>product name</td>
 										<td class="center">1200</td>
 										<td class="center">2</td>
 										<td class="center">2400</td>
 									</tr>
 									<tr>
-										<td><img src="/static/img/productimg2.jpg"></td>
+										<td><img src="/static/img/product/img2.jpg"></td>
 										<td>product name</td>
 										<td class="center">1500</td>
 										<td class="center">2</td>
@@ -142,7 +142,7 @@
 				<div class="product-content">
 					<div class="product">
 						<a href="product">
-							<img src="/static/img/productimg1.jpg">
+							<img src="/static/img/product/img1.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Watches</h3>
@@ -153,7 +153,7 @@
 					</div>
 					<div class="product">
 						<a href="product">
-							<img src="/static/img/productimg2.jpg">
+							<img src="/static/img/product/img2.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Pants</h3>
@@ -164,7 +164,7 @@
 					</div>
 					<div class="product">
 						<a href="product">
-							<img src="/static/img/productimg3.jpg">
+							<img src="/static/img/product/img3.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Watches</h3>
@@ -175,7 +175,7 @@
 					</div>
 					<div class="product">
 						<a href="product">
-							<img src="/static/img/productimg4.jpg">
+							<img src="/static/img/product/img4.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Shoes</h3>
@@ -186,7 +186,7 @@
 					</div>
 					<div class="product">
 						<a href="product">
-							<img src="/static/img/productimg5.jpg">
+							<img src="/static/img/product/img5.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Glasses</h3>
@@ -197,7 +197,7 @@
 					</div>
 					<div class="product">
 						<a href="product">
-							<img src="/static/img/productimg6.jpg">
+							<img src="/static/img/product/img6.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Women's / Hand Bags</h3>
@@ -208,7 +208,7 @@
 					</div>
 					<div class="product">
 						<a href="product">
-							<img src="/static/img/productimg7.jpg">
+							<img src="/static/img/product/img7.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Shoes</h3>
@@ -219,7 +219,7 @@
 					</div>
 					<div class="product">
 						<a href="product">
-							<img src="/static/img/productimg8.jpg">
+							<img src="/static/img/product/img8.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Women's / Hand Bags</h3>
@@ -248,7 +248,7 @@
 				<div class="product-content">
 					<div class="product">
 						<a href="product">
-							<img src="/static/img/productimg1.jpg">
+							<img src="/static/img/product/img1.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Watches</h3>
@@ -259,7 +259,7 @@
 					</div>
 					<div class="product">
 						<a href="product">
-							<img src="/static/img/productimg2.jpg">
+							<img src="/static/img/product/img2.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Pants</h3>
@@ -270,7 +270,7 @@
 					</div>
 					<div class="product">
 						<a href="product">
-							<img src="/static/img/productimg3.jpg">
+							<img src="/static/img/product/img3.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Watches</h3>
@@ -281,7 +281,7 @@
 					</div>
 					<div class="product">
 						<a href="product">
-							<img src="/static/img/productimg4.jpg">
+							<img src="/static/img/product/img4.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Shoes</h3>
