05 - Adaptado el modulo products para que maneje la ruta de la imagen en la bd

--- a/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/shop.html
+++ b/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/shop.html
@@ -3,7 +3,7 @@
 
  	<head>
  		<!-- Meta Tags -->
-		<meta charset="UTF-8">
+		<meta cha$et="UTF-8">
 		<meta name="author" content="Kamran Mubarik">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Title -->
@@ -22,11 +22,11 @@
 			      max: 10000,
 			      values: [ 1000, 3000 ],
 			      slide: function( event, ui ) {
-			        $( "#amount" ).val( "Rs." + ui.values[ 0 ] + " - Rs." + ui.values[ 1 ] );
+			        $( "#amount" ).val( "$" + ui.values[ 0 ] + " - $" + ui.values[ 1 ] );
 			      }
 			    });
-			    $( "#amount" ).val( "Rs." + $( "#slider-range" ).slider( "values", 0 ) +
-			      " - Rs." + $( "#slider-range" ).slider( "values", 1 ) );
+			    $( "#amount" ).val( "$" + $( "#slider-range" ).slider( "values", 0 ) +
+			      " - $" + $( "#slider-range" ).slider( "values", 1 ) );
 			});
 		 </script>
  	</head>
@@ -50,33 +50,11 @@
 						<div class="dropdown-menu">
 							<ul>
 								<li><a href="account">My Account</a></li>
-								<li><a href="orders">My Orders</a></li>
+								<li><a href="orde$">My Orders</a></li>
 							</ul>
 						</div>
 					</div>
-					<div class="dropdown">
-						<img src="/static/img/icons/heart.png">
-						<div class="dropdown-menu wishlist-item">
-							<table border="1">
-								<thead>
-									<tr>
-										<th>Image</th>
-										<th>Product Name</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td><img src="/static/img/product/img1.jpg"></td>
-										<td>product name</td>
-									</tr>
-									<tr>
-										<td><img src="/static/img/product/img2.jpg"></td>
-										<td>product name</td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-					</div>
+
 					<div class="dropdown">
 						<img src="/static/img/icons/shopping_cart.png">
 						<div class="dropdown-menu cart-item">
@@ -174,7 +152,7 @@
 							<h3>Men's / Watches</h3>
 							<h2>Gray Color Men's Watch</h2>
 							<a href="#">Add to Cart</a>
-							<p>Rs.4500/-</p>
+							<p>$4500</p>
 						</div>						
 					</div>
 					<div class="product">
@@ -185,7 +163,7 @@
 							<h3>Men's / Pants</h3>
 							<h2>Levi's Jeans Pant</h2>
 							<a href="#">Add to Cart</a>
-							<p>Rs.2000/-</p>
+							<p>$2000</p>
 						</div>
 					</div>
 					<div class="product">
@@ -196,7 +174,7 @@
 							<h3>Men's / Watches</h3>
 							<h2>Black Men's Watch</h2>
 							<a href="#">Add to Cart</a>
-							<p>Rs.4000/-</p>
+							<p>$4000</p>
 						</div>
 					</div>
 					<div class="product">
@@ -205,9 +183,9 @@
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Shoes</h3>
-							<h2>Nick Black Sneakers</h2>
+							<h2>Nick Black Sneake$</h2>
 							<a href="#">Add to Cart</a>
-							<p>Rs.3200/-</p>
+							<p>$3200</p>
 						</div>
 					</div>
 					<div class="product">
@@ -218,7 +196,7 @@
 							<h3>Glasses</h3>
 							<h2>Wood Frame Sun Glass</h2>
 							<a href="#">Add to Cart</a>
-							<p>Rs.1200/-</p>
+							<p>$1200</p>
 						</div>
 					</div>
 					<div class="product">
@@ -229,7 +207,7 @@
 							<h3>Women's / Hand Bags</h3>
 							<h2>Leather Hand Bag</h2>
 							<a href="#">Add to Cart</a>
-							<p>Rs.3800/-</p>
+							<p>$3800</p>
 						</div>
 					</div>
 					<div class="product">
@@ -240,7 +218,7 @@
 							<h3>Men's / Shoes</h3>
 							<h2>Men's Sneaker</h2>
 							<a href="#">Add to Cart</a>
-							<p>Rs.3500/-</p>
+							<p>$3500</p>
 						</div>
 					</div>
 					<div class="product">
@@ -251,7 +229,7 @@
 							<h3>Women's / Hand Bags</h3>
 							<h2>Brown Leather Hand Bag</h2>
 							<a href="#">Add to Cart</a>
-							<p>Rs.5200/-</p>
+							<p>$5200</p>
 						</div>
 					</div>
 				</div>				
@@ -285,7 +263,7 @@
 					<div class="widget-content">
 						<ul>
 							<li><a href="account">My Account</a></li>
-							<li><a href="orders">My Orders</a></li>
+							<li><a href="orde$">My Orde$</a></li>
 							<li><a href="cart">Cart</a></li>
 							<li><a href="checkout">Checkout</a></li>
 						</ul>
