05 - Barra de busqueda implementada

--- a/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/shop.html
+++ b/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/shop.html
@@ -100,10 +100,10 @@
                 </ul>
             </div>
             <div class="search-bar">
-                <form>
+                <form action="/shop" method="get">
                     <div class="form-group">
-                        <input type="text" class="form-control" name="search" placeholder="Search">
-                        <img src="/static/img/icons/search.png">
+                        <input type="text" class="form-control" name="name" placeholder="Search">
+                        <button type="submit"><img src="/static/img/icons/search.png"></button>
                     </div>
                 </form>
             </div>
