05 - Filtro de genero - Creado

--- a/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/shop.html
+++ b/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/shop.html
@@ -126,12 +126,8 @@
                 <div class="sidebar-widget">
                     <h3>Category</h3>
                     <ul>
-                        <li><a href="">Men's Clothes</a></li>
-                        <li><a href="">Men's Shoes</a></li>
-                        <li><a href="">Men's Watches</a></li>
-                        <li><a href="">Women's Handbags</a></li>
-                        <li><a href="">Women's Glasses</a></li>
-
+                        <li><a th:href="@{/shop(category='M')}">Men's Products</a></li>
+                        <li><a th:href="@{/shop(category='F')}">Woman's Products</a></li>
                     </ul>
                 </div>
                 <div class="sidebar-widget">
