--- a/07 - Home Server/src/main/resources/templates/index.html
+++ b/07 - Home Server/src/main/resources/templates/index.html
@@ -2,38 +2,7 @@
 <html>
 <head>
     <title>Home Server</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #000;
-            color: #fff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            flex-direction: column;
-        }
-        h1 {
-            color: #ff0000;
-            font-size: 3em; /* Aumenta el tamaño de la fuente del letrero */
-        }
-        .button {
-            display: inline-block;
-            background-color: #ff0000;
-            color: #fff;
-            text-decoration: none;
-            padding: 20px 40px; /* Aumenta el padding para hacer el botón más grande */
-            margin-top: 20px;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-            font-size: 1.5em; /* Aumenta el tamaño de la fuente del botón */
-        }
-        .button:hover {
-            background-color: #cc0000;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
 <h1>Home Server</h1>
