--- a/07 - Home Server/src/main/resources/templates/path.html
+++ b/07 - Home Server/src/main/resources/templates/path.html
@@ -1,50 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Set Path</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #000;
-            color: #fff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            flex-direction: column;
-        }
-        .path-form {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .path-input {
-            margin-bottom: 10px;
-            padding: 10px;
-            font-size: 1em;
-            color: #000;
-        }
-        .submit-button {
-            display: inline-block;
-            background-color: #ff0000;
-            color: #fff;
-            text-decoration: none;
-            padding: 20px 40px;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-            font-size: 1.5em;
-        }
-        .submit-button:hover {
-            background-color: #cc0000;
-        }
-    </style>
+    <title>App Name</title>
+    <link rel="icon" type="image/png" href="/img/icon.png">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
+<div class="card">
+    <div class="image-box">
+        <img class="img" src="/img/logo.png">
+    </div>
+    <h3 class="h3">
+        App Name
+    </h3>
+    <div class="text-box">
+        <ol class="text">
+            <li>Enter the path of your videos folder that you want to share</li>
+            <li>Go to cmd and type 'ipconfig'</li>
+            <li>Copy your IP</li>
+            <li>Paste it on any device browser that is connected to your router</li>
+        </ol>
+    </div>
     <form action="/path" method="post" class="path-form">
         <input type="text" name="path" class="path-input" placeholder="Enter path here">
         <button type="submit" class="submit-button">Set Path</button>
     </form>
+</div>
+
 </body>
 </html>
