07 - El ip te lo da la web ahora

--- a/07 - Home Server/src/main/resources/templates/path.html
+++ b/07 - Home Server/src/main/resources/templates/path.html
@@ -16,8 +16,8 @@
     <div class="text-box">
         <ol class="text">
             <li>Enter the path of your videos folder that you want to share</li>
-            <li>Go to cmd and type 'ipconfig'</li>
-            <li>Copy your IP</li>
+            <li>Turn of your VPN or Firewall</li>
+            <li>Copy your IP: [[${serverIp}]]</li>
             <li>Paste it on any device browser that is connected to your router</li>
         </ol>
     </div>
