--- a/07 - Home Server/src/main/resources/static/css/style.css
+++ b/07 - Home Server/src/main/resources/static/css/style.css
@@ -49,7 +49,7 @@ h3{
 }
 
 h1 {
-    color: #7d1212;
+    color: #ff0000;
     font-size: 3em; /* Aumenta el tamaño de la fuente del letrero */
 }
 .button {
@@ -64,7 +64,7 @@ h1 {
     font-size: 1.5em; /* Aumenta el tamaño de la fuente del botón */
 }
 .button:hover {
-    background-color: #7d1212;
+    background-color: #ff0000;
 }
 .card{
     background-color: rgb(20, 20, 20);
