07 - Editado el index

--- a/07 - Home Server/src/main/resources/templates/index.html
+++ b/07 - Home Server/src/main/resources/templates/index.html
@@ -4,8 +4,11 @@
     <title>Home Server</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
-<body>
-<h1>Home Server</h1>
+<body class="body-index">
+<div class="image-box-index">
+    <img class="img-index" src="/img/logo.png">
+</div>
+<h1 class="h1-index">Home Server</h1>
 <a href="/videos" class="button">Go to Videos</a>
 </body>
 </html>
