--- a/07 - Home Server/src/main/resources/static/css/style.css
+++ b/07 - Home Server/src/main/resources/static/css/style.css
@@ -49,7 +49,7 @@ h3{
 }
 
 h1 {
-    color: #ff0000;
+    color: #7d1212;
     font-size: 3em; /* Aumenta el tamaño de la fuente del letrero */
 }
 .button {
@@ -64,7 +64,7 @@ h1 {
     font-size: 1.5em; /* Aumenta el tamaño de la fuente del botón */
 }
 .button:hover {
-    background-color: #ff0000;
+    background-color: #7d1212;
 }
 .card{
     background-color: rgb(20, 20, 20);
@@ -104,4 +104,41 @@ h1 {
     margin-top: 50px;
     margin-left: 10px;
     margin-right: 10px;
+}
+
+.body-index {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #000;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    flex-direction: column;
+    font-size: 20px; /* Ajusta el tamaño de la fuente de todo el cuerpo del documento */
+}
+.img-index {
+    border-radius: 100%;
+    width: 430px;
+    margin: 20px 120px;
+    box-shadow: 0 0 40px 0 #7d1212;
+}
+.h1-index {
+    color: #7d1212;
+
+    font-size: 60px; /* Ajusta el tamaño de la fuente del título */
+}
+.button-index {
+    display: inline-block;
+    background-color: #7d1212;
+    color: #fff;
+    text-decoration: none;
+    margin-top: 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+
+    padding: 35px 55px; /* Ajusta el relleno del botón */
+    font-size: 40px; /* Ajusta el tamaño de la fuente del botón */
 }
