07 - We Are Streamlt

--- a/07 - Home Server/src/main/resources/templates/path.html
+++ b/07 - Home Server/src/main/resources/templates/path.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>App Name</title>
+    <title>Streamlt</title>
     <link rel="icon" type="image/png" href="/img/icon.png">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
