--- a/07 - Home Server/src/main/resources/templates/videos.html
+++ b/07 - Home Server/src/main/resources/templates/videos.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Videos</title>
+    <title>Streamlt</title>
     <link rel="stylesheet" type="text/css" href="/css/video.css">
 </head>
 <body>
@@ -13,7 +13,8 @@
     <div class="videos-list">
         <ul>
             <li th:each="video : ${videos}">
-                <a class="video-button-home-server" th:href="@{${path} + '/' + ${video}}" th:text="${video}"  download></a>
+                <a class="video-button-home-server" th:href="@{'/video?path=' + ${video.encodedPath}}"
+                   th:text="${video.fileName}" download></a>
             </li>
         </ul>
     </div>
