--- a/07 - Home Server/src/main/resources/templates/index.html
+++ b/07 - Home Server/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home Server</title>
+    <title>StreamIt</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body class="body-index">
